canvas and video are responsive. Removed hard-coded css styling from the javascript

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,18 @@
-#video-player {
-  width: 500px;
-  height: auto;
-}
-
 .container {
   display: flex;
   flex-direction: row;
+}
+
+.container video, .container canvas {
+  width: 100%;
+  height: auto;
+}
+
+.container > * {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+.container > *:last-child {
+  margin-right: 0;
 }
