--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "HelveticaNeue-Light", "Helvetica Nueue", Helvetica, Arial, sans-serif;
+}
+
 .container {
   display: flex;
   flex-direction: row;
