--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
-  font-family: "HelveticaNeue-Light", "Helvetica Nueue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-family: "Helvetica Nueue", Helvetica, Arial, sans-serif;
 }
 
 .container {
@@ -19,5 +25,36 @@ body {
 }
 
 .container > *:last-child {
+  margin-right: 0;
+}
+
+.navbar {
+  color: white;
+  background-color: #333138;
+  padding: 5px;
+}
+
+.navbar__title {
+  font-weight: 100;
+  font-size: 1.2em;
+}
+
+#fileUpload {
+  padding: 10px;
+}
+
+.preview__buttons {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.preview__buttons > div {
+  margin-right: 10px;
+}
+
+.preview__buttons > div:last-child {
   margin-right: 0;
 }
