--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .preview__buttons > div {
